--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
-body {
-    background-color: rgb(241, 241, 88);
+
+:root {
+    --primary-color:rgb(241, 241, 88);
+ 
+  }
+  body {
+    background: var(--primary-color);
 }
 h1,p {
     text-align: center;
 }
-.col {
+.navigation-links {
     color: green;
+    display: flex;
+  margin-top: 10px;
+  justify-content: center;
 }
-.container {
-    justify-content: space-evenly;
-  }
+
