--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,12 @@
   padding-left: 20px;
     color: green;
   }
-  img {
- 
+  .image {
+    display: flex;
     justify-content: center;
+    
+  }
+  .image img {
     border: 1 px solid beige;
-    border-radius: 5px;
+    border-radius: 10px;
   }
